<resources>
    <string name="app_name">态度</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_text">空空如也:)</string>
    <string name="no_data_text_feedback">你还没有关注过任何的问题呢:)</string>


    <!--登陆注册页面-->
    <string name="getCode">获取验证码</string>
    <string name="toRegister">我要注册</string>
    <string name="toLogin">我要登录</string>
    <string name="Login">登  录</string>
    <string name="Register">注  册</string>
    <string name="ResetPSW">密码找回</string>
    <string name="Error_Login_check">请核对手机号和密码</string>
    <string name="Change_psw">修改密码</string>

    <string name="Logout">退出登录</string>

    <string name="main_title_attitude">态  度</string>
    <string name="main_title_feedback">反  馈</string>
    <string name="main_title_squares">广  场</string>
    <string name="main_title_settings">设  置</string>

    <!--submit页面中的文字-->
    <string name="describe_ur_question">请描述您的问题：</string>
    <string name="describe_a">请描述您的A选项：</string>
    <string name="describe_b">请描述您的B选项：</string>
    <string name="txt_times2feedback">多少人表态后不再收集态度:</string>
    <string name="help_times2feedback">50-300人次</string>
    <string name="txt_when2feedback">最迟多久向您反馈:</string>
    <string name="help_when2feedback">1-30天</string>
    <string name="txt_isAnonymity">是否匿名发布:</string>

    <!--侧滑菜单中item的文字-->
    <string name="item1_str">I think</string>
    <string name="item2_str">feedback</string>
    <string name="item3_str">Squares</string>
    <string name="item4_str">settings</string>
    <!--登陆界面的提示文字-->
    <string name="login_phone">使用手机号码</string>
    <string name="login_password">请输入您的密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">请核对您的手机号码</string>
    <string name="error_invalid_password">密码太短了，再复杂点</string>
    <string name="error_incorrect_password">账号和密码错误，请核实后重试</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="permission_rationale">我需要权限</string>

    <!--FeedbackFragment-->
    <string name="flag_in_card">标识该问题已经完成了态度收集</string>

    <!--drawer-->
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <!--BmobAppId-->
    <string name="BMOB_APP_ID">cb2687d856ed3ee833353215cd5c7678</string>
    <!--BugTags-->
    <string name="BUGTAGS_APP_ID">e96212415aeb3e501d094f5c5624d3a5</string>
</resources>
