<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include layout="@layout/include_toolbar_layout"/>
    <gg.attitude.views.MyScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/describeLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding_small"
                    >
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/contentTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:minLines="4"
                        android:padding="4dp"
                        android:freezesText="true"
                        android:lineSpacingMultiplier="1.2"
                        app:met_maxCharacters="120"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/describe_ur_question"
                        android:hint="@string/describe_ur_question"
                        app:met_floatingLabelAnimating="true"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/error_dark"
                        app:met_hideUnderline="true"
                        android:textSize="@dimen/txt_size_edit"
                        ><requestFocus/>
                    </com.rengwuxian.materialedittext.MaterialEditText>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_chart_b"
                    android:visibility="gone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:minWidth="@dimen/min_height_editText"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A"
                            android:textSize="@dimen/txt_size_normal"
                            android:textStyle="bold"
                            android:textColor="@color/color_chart_a"/>
                    </LinearLayout>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/describe_a"
                        android:freezesText="true"
                        android:lineSpacingMultiplier="1.2"
                        app:met_baseColor="@color/textColor_grey_light"
                        app:met_hideUnderline="true"
                        app:met_primaryColor="@color/textColor_grey_light"
                        app:met_errorColor="@color/error_dark"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/describe_a"
                        app:met_maxCharacters="24"
                        android:textSize="@dimen/txt_size_edit"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_chart_a"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:minWidth="@dimen/min_height_editText"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="B"
                            android:textSize="@dimen/txt_size_normal"
                            android:textStyle="bold"
                            android:textColor="@color/color_chart_b"/>
                    </LinearLayout>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/describe_b"
                        android:freezesText="true"
                        android:layout_margin="4dp"
                        android:lineSpacingMultiplier="1.2"
                        app:met_hideUnderline="true"
                        app:met_baseColor="@color/textColor_grey_light"
                        app:met_primaryColor="@color/textColor_grey_light"
                        app:met_errorColor="@color/error_dark"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/describe_b"
                        app:met_maxCharacters="24"
                        android:textSize="@dimen/txt_size_edit"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_chart_b"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">
                <LinearLayout
                    android:id="@+id/feedbackLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding_small"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:minHeight="@dimen/min_height_editText"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_margin="4dp"
                            android:textSize="@dimen/txt_size_edit"
                            android:text="@string/txt_times2feedback"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="@dimen/min_height_editText"
                        android:gravity="center">
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/times"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="50"
                            android:hint="@string/help_times2feedback"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            app:met_hideUnderline="true"
                            app:met_baseColor="@color/colorPrimary"
                            app:met_primaryColor="@color/colorPrimary"
                            app:met_errorColor="@color/error"
                            app:met_floatingLabel="highlight"
                            app:met_floatingLabelText="@string/help_times2feedback"
                            android:textSize="@dimen/txt_size_edit"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_chart_b"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding_small"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:minHeight="@dimen/minheight_Layout"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_margin="4dp"
                            android:textSize="18sp"
                            android:text="@string/txt_when2feedback"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="gone"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="@dimen/minheight_Layout"
                        android:gravity="center">
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/when"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="5"
                            android:hint="@string/help_when2feedback"
                            android:layout_margin="4dp"
                            android:inputType="number"
                            app:met_hideUnderline="true"
                            app:met_baseColor="@color/colorPrimary"
                            app:met_primaryColor="@color/colorPrimary"
                            app:met_errorColor="@color/error"
                            app:met_floatingLabel="highlight"
                            app:met_floatingLabelText="@string/help_when2feedback"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="@color/color_chart_b"/>
                <LinearLayout
                    android:id="@+id/isNiMingLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding_small"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:minHeight="@dimen/min_height_editText"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_margin="4dp"
                            android:textSize="@dimen/txt_size_edit"
                            android:text="@string/txt_isAnonymity"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:visibility="gone"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="@dimen/min_height_editText"
                        android:gravity="center">
                        <com.kyleduo.switchbutton.SwitchButton
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/isNiMing"
                            android:layout_margin="4dp"
                            app:buttonTintMode="src_in"
                            app:kswTextOn="Y"
                            app:kswTextOff="N"
                            android:textColor="@color/white"
                            app:kswFadeBack="true"
                            app:kswBackColor="@color/colorPrimary"
                            app:kswThumbColor="@color/white"
                            app:kswAnimationDuration="500"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </gg.attitude.views.MyScrollView>
</LinearLayout>