<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:minWidth="270dp"
    android:fitsSystemWindows="true"
    android:layout_gravity="start"
    android:background="@color/white"
    >
    <include layout="@layout/include_main_mydrawer_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_in_drawer"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/margin_in_drawer_small"
                android:paddingRight="@dimen/margin_in_drawer"
                android:paddingBottom="@dimen/margin_in_drawer_small"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="@dimen/iv_small_size_drawer"
                    android:layout_height="@dimen/iv_small_size_drawer"
                    android:background="@color/transparent"
                    android:src="@drawable/attitude"
                    android:tint="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_iv2tv"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/main_title_attitude"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <gg.attitude.views.CircleImageView
                    android:id="@+id/civ1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@color/colorPrimary"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/margin_in_drawer_small"
                android:paddingRight="@dimen/margin_in_drawer"
                android:paddingBottom="@dimen/margin_in_drawer_small"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="@dimen/iv_small_size_drawer"
                    android:layout_height="@dimen/iv_small_size_drawer"
                    android:background="@color/transparent"
                    android:src="@drawable/feedback"
                    android:tint="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_iv2tv"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/main_title_feedback"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <gg.attitude.views.CircleImageView
                    android:id="@+id/civ2"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@color/colorPrimary"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_in_drawer_small"
                android:layout_marginRight="@dimen/margin_in_drawer"
                android:layout_marginBottom="@dimen/margin_in_drawer_small"
                android:visibility="gone"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="@dimen/iv_small_size_drawer"
                    android:layout_height="@dimen/iv_small_size_drawer"
                    android:background="@color/transparent"
                    android:src="@drawable/attitude"
                    android:tint="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_iv2tv"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/main_title_squares"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <gg.attitude.views.CircleImageView
                    android:id="@+id/civ3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@color/colorPrimary"
                    android:visibility="gone"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/margin_in_drawer"
                android:paddingRight="@dimen/margin_in_drawer"
                android:paddingBottom="@dimen/margin_in_drawer"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="@dimen/iv_small_size_drawer"
                    android:layout_height="@dimen/iv_small_size_drawer"
                    android:background="@color/transparent"
                    android:src="@drawable/settings"
                    android:tint="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_iv2tv"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/main_title_settings"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <gg.attitude.views.CircleImageView
                    android:id="@+id/civ4"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@color/colorPrimary"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>